Update all files for travis testing

--- a/src/main/resources/templates/account_list.html
+++ b/src/main/resources/templates/account_list.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"
       html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-security5"
-    sec:authorize="hasAuthority('ADMIN')">
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-security5">
 <head>
     <meta charset="UTF-8">
     <title>Account Management System</title>
