--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -25,3 +25,40 @@
     color: #0b0b0b;
     text-decoration: underline;
 }
+.product__details__big__img {
+    width: calc(84% - 20px);
+    float: left;
+    margin-right: 20px;
+}
+.product__details__big__img img {
+    min-width: 100%;
+}
+
+.product__details__thumb {
+    height: 100%;
+    float: left;
+    width: 16%;
+    overflow: hidden;
+}
+.product__details__thumb .pt__item {
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+.product__details__thumb .pt__item img {
+    min-width: 100%;
+    max-height: 100px;
+}
+#admin-panel{
+    text-align: center;
+    vertical-align: middle;
+}
+.admin-btn{
+    max-width: 30%;
+    background-color: #f08632;
+}
+.admin-btn:hover{
+    background-color: #0b0b0b;
+}
+.admin-btn a{
+    color: #fff;
+}
