--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="zxx" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
+<html lang="zxx" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-security5">
 
 <head>
     <meta charset="UTF-8">
@@ -16,19 +17,21 @@
           rel="stylesheet">
 
     <!-- Css Styles -->
-    <link rel="stylesheet" href="../../css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="../../css/flaticon.css" type="text/css">
-    <link rel="stylesheet" href="../../css/barfiller.css" type="text/css">
-    <link rel="stylesheet" href="../../css/magnific-popup.css" type="text/css">
-    <link rel="stylesheet" href="../../css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="../../css/elegant-icons.css" type="text/css">
-    <link rel="stylesheet" href="../../css/nice-select.css" type="text/css">
-    <link rel="stylesheet" href="../../css/owl.carousel.min.css" type="text/css">
-    <link rel="stylesheet" href="../../css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="../../css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="css/flaticon.css" type="text/css">
+    <link rel="stylesheet" href="css/barfiller.css" type="text/css">
+    <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
+    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="css/elegant-icons.css" type="text/css">
+    <link rel="stylesheet" href="css/nice-select.css" type="text/css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
+    <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/custom.css" type="text/css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 </head>
 
-<body>
+<body onload="loadInfo()">
 <!-- Page Preloder -->
 <div id="preloder">
     <div class="loader"></div>
@@ -129,10 +132,10 @@
                     <ul>
                         <li><a href="./">Home</a></li>
                         <li><a href="/about">About</a></li>
-                        <li class="active"><a href="/shop">Shop</a></li>
+                        <li><a href="/shop">Shop</a></li>
                         <li><a href="/shoping-cart">Cart</a></li>
                         <li><a href="/contact">Contact</a></li>
-                        <li th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}"><a href="/admin-panel">Admin Panel</a></li>
+                        <li class="active"><a href="/admin-panel">Admin Panel</a></li>
                     </ul>
                 </nav>
             </div>
@@ -147,13 +150,13 @@
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-6">
                 <div class="breadcrumb__text">
-                    <h2>Shop</h2>
+                    <h2>Admin Panel</h2>
                 </div>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6">
                 <div class="breadcrumb__links">
                     <a href="./">Home</a>
-                    <span>Shop</span>
+                    <span>Admin panel</span>
                 </div>
             </div>
         </div>
@@ -161,108 +164,24 @@
 </div>
 <!-- Breadcrumb End -->
 
-<!-- Shop Section Begin -->
-<section class="shop spad">
+<!-- Checkout Section Begin -->
+<section class="checkout spad">
     <div class="container">
-        <!--            <div class="shop__option">-->
-        <!--                <div class="row">-->
-        <!--                    <div class="col-lg-7 col-md-7">-->
-        <!--                        <div class="shop__option__search">-->
-        <!--                            <form action="#">-->
-        <!--                                <select>-->
-        <!--                                    <option value="">Categories</option>-->
-        <!--                                    <option value="">Red Velvet</option>-->
-        <!--                                    <option value="">Cup Cake</option>-->
-        <!--                                    <option value="">Biscuit</option>-->
-        <!--                                </select>-->
-        <!--                                <input type="text" placeholder="Search">-->
-        <!--                                <button type="submit"><i class="fa fa-search"></i></button>-->
-        <!--                            </form>-->
-        <!--                        </div>-->
-        <!--                    </div>-->
-        <!--                    <div class="col-lg-5 col-md-5">-->
-        <!--                        <div class="shop__option__right">-->
-        <!--                            <select>-->
-        <!--                                <option value="">Default sorting</option>-->
-        <!--                                <option value="">A to Z</option>-->
-        <!--                                <option value="">1 - 8</option>-->
-        <!--                                <option value="">Name</option>-->
-        <!--                            </select>-->
-        <!--                            <a href="#"><i class="fa fa-list"></i></a>-->
-        <!--                            <a href="#"><i class="fa fa-reorder"></i></a>-->
-        <!--                        </div>-->
-        <!--                    </div>-->
-        <!--                </div>-->
-        <!--            </div>-->
-
-        <!-- Item List Begin -->
-        <div class="row" th:if="${not #lists.isEmpty(shopList)}">
-            <div class="col-lg-3 col-md-6 col-sm-6" th:each="shop : ${shopList}">
-                <div class="product__item">
-                    <div class="product__item__pic set-bg" th:attr="data-setbg=${'img/upload/item'+shop.id+'/'+#strings.arraySplit(shop.itemImage, '|')[0]}">
-                        <!--"@{${'/img/shop/' + shop.image}}"-->
-                        <div class="product__label">
-                            <span>Cupcake</span>
-                        </div>
-                    </div>
-                    <div class="product__item__text">
-                        <h6>
-                            <!--                                href="/shop-details" http://localhost:8080/shop?page=1#-->
-                            <a th:href="@{/shop-details(id=${shop.id})}" th:text="${shop.itemName}"></a></h6>
-                        <div class="product__item__price" th:text="${shop.itemPrice}"></div>
-                        <div class="cart_add">
-                            <a th:href="@{/shop-details(id=${shop.id})}">Check details</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Item List End -->
-
-        <div class="shop__last__option">
-            <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-6">
-                    <!-- Pagination -->
-                    <nav class="shop__pagination">
-                        <ul class="pagination">
-                            <!--                                <li class="page-item">-->
-                            <!--                                    <a class="page-link" th:href="@{/?page=1}">-->
-                            <!--                                        <span aria-hidden="true">First</span>-->
-                            <!--                                    </a>-->
-                            <!--                                </li>-->
-                            <li>
-                                <a th:href="@{?page={page}(page = ${pagination.prevBlock})}">
-                                    <span class="arrow_carrot-left"></span>
-                                </a>
-                            </li>
-                            <th:block th:with="start = ${pagination.startPage}, end = ${pagination.lastPage}">
-                                <li
-                                        th:with="start = ${pagination.startPage}, end = ${pagination.lastPage}"
-                                        th:each="pageButton : ${#numbers.sequence(start, end)}">
-                                    <a th:href="@{?page={page}(page = ${pageButton})}" th:text="${pageButton}"></a>
-                                </li>
-                            </th:block>
-                            <li>
-                                <a th:href="@{?page={page} (page = ${pagination.nextBlock})}">
-                                    <span class="arrow_carrot-right"></span>
-                                </a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-
-
-                <div class="col-lg-6 col-md-6 col-sm-6">
-                    <div class="shop__last__text">
-                        <span>Current page  </span>
-                        <span th:text="${pagination.page}"></span>
-                    </div>
-                </div>
+        <div class="checkout__form">
+            <div class="checkout__order" id="admin-panel">
+                <p style="font-size: 1.5em">Please choose an action to proceed:</p>
+                <br>
+                <a href="/item-form"><button class="site-btn admin-btn">ADD AN ITEM</button></a>
+                <a href="/item-list"><button class="site-btn admin-btn">VIEW ITEM LIST</button></a>
+                <hr>
+                <a href="/admin/account-management"><button class="site-btn admin-btn">ACCOUNT MANAGEMENT</button></a>
+                <hr>
+                <a href="/orderlist"><button class="site-btn admin-btn">VIEW ORDER LIST</button></a>
             </div>
         </div>
     </div>
 </section>
-<!-- Shop Section End -->
+<!-- Checkout Section End -->
 
 <!-- Footer Section Begin -->
 <footer class="footer set-bg" data-setbg="img/footer-bg.jpg">
@@ -309,11 +228,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-7">
-                    <p class="copyright__text text-white">
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        Copyright &copy;<script>document.write(new Date().getFullYear());</script>
-                        All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i>
-                        by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                    <p class="copyright__text text-white"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                        Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </p>
                 </div>
@@ -344,15 +260,16 @@
 <!-- Search End -->
 
 <!-- Js Plugins -->
-<script src="../../js/jquery-3.3.1.min.js"></script>
-<script src="../../js/bootstrap.min.js"></script>
-<script src="../../js/jquery.nice-select.min.js"></script>
-<script src="../../js/jquery.barfiller.js"></script>
-<script src="../../js/jquery.magnific-popup.min.js"></script>
-<script src="../../js/jquery.slicknav.js"></script>
-<script src="../../js/owl.carousel.min.js"></script>
-<script src="../../js/jquery.nicescroll.min.js"></script>
-<script src="../../js/main.js"></script>
+<script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.nice-select.min.js"></script>
+<script src="js/jquery.barfiller.js"></script>
+<script src="js/jquery.magnific-popup.min.js"></script>
+<script src="js/jquery.slicknav.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/jquery.nicescroll.min.js"></script>
+<script src="js/main.js"></script>
+<script src="js/custom.js"></script>
 </body>
 
 </html>
