--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -44,12 +44,12 @@
                 <a href="#"><img src="../../img/icon/heart.png" alt=""></a>
             </div>
             <div class="offcanvas__cart__item">
-                <a href="#"><img src="../../img/icon/cart.png" alt=""> <span>0</span></a>
-                <div class="cart__price">Cart: <span>$0.00</span></div>
+                <a href="#"><img src="../../img/icon/cart.png" alt=""> <span th:text="${cartQty}">0</span></a>
+                <div class="cart__price">Cart: <span th:text="${'$'+cartSum}">$0.00</span></div>
             </div>
         </div>
         <div class="offcanvas__logo">
-            <a href="./index.html"><img src="../../img/logo.png" alt=""></a>
+            <a href="./"><img src="../../img/logo.png" alt=""></a>
         </div>
         <div id="mobile-menu-wrap"></div>
         <div class="offcanvas__option">
@@ -66,7 +66,8 @@
                         <li>ENG</li>
                     </ul>
                 </li>
-                <li><a href="" sec:authentication="principal.firstName"></a> <span class="arrow_carrot-down"></span></li>
+                <li th:if="${#authorization.expression('!isAuthenticated()')}"><a href="/login">Log in</a> <span class="arrow_carrot-down"></span></li>
+                <li th:if="${#authorization.expression('isAuthenticated()')}"><a href="" sec:authentication="principal.firstName"></a> <span class="arrow_carrot-down"></span></li>
             </ul>
         </div>
     </div>
@@ -93,17 +94,18 @@
                                             <li>ENG</li>
                                         </ul>
                                     </li>
-                                    <li><a sec:authentication="principal.firstName"></a> <span class="arrow_carrot-down"></span>
+                                    <li th:if="${#authorization.expression('!isAuthenticated()')}"><a href="/login">Log in</a> <span class="arrow_carrot-down"></span></li>
+                                    <li th:if="${#authorization.expression('isAuthenticated()')}"><a sec:authentication="principal.firstName"></a> <span class="arrow_carrot-down"></span>
                                         <ul style="width: 180px;">
-                                            <li><a class="update" href="localhost:8080/user/update" style="color:white; display:block">Update Account</a></li>
-                                            <li><a class="logout" href="localhost:8080/logout" style="color:white" onclick="window.open('localhost:8080/logout', '_blank')">Logout</a>
+                                            <li><a class="update" href="/user/update" style="color:white; display:block">Update Account</a></li>
+                                            <li><a class="logout" href="/logout" style="color:white" target="_blank">Logout</a>
                                             </li>
                                         </ul>
                                     </li>
                                 </ul>
                             </div>
                             <div class="header__logo">
-                                <a href="./index.html"><img src="../../img/logo.png" alt=""></a>
+                                <a href="./"><img src="../../img/logo.png" alt=""></a>
                             </div>
                             <div class="header__top__right">
                                 <div class="header__top__right__links">
@@ -111,8 +113,8 @@
                                     <a href="#"><img src="../../img/icon/heart.png" alt=""></a>
                                 </div>
                                 <div class="header__top__right__cart">
-                                    <a href="#"><img src="../../img/icon/cart.png" alt=""> <span>0</span></a>
-                                    <div class="cart__price">Cart: <span>$0.00</span></div>
+                                    <a href="#"><img src="../../img/icon/cart.png" alt=""> <span th:text="${cartQty}">0</span></a>
+                                    <div class="cart__price">Cart: <span th:text="${'$'+cartSum}">$0.00</span></div>
                                 </div>
                             </div>
                         </div>
@@ -126,20 +128,12 @@
                 <div class="col-lg-12">
                     <nav class="header__menu mobile-menu">
                         <ul>
-                            <li class="active"><a href="./index.html">Home</a></li>
-                            <li><a href="./about.html">About</a></li>
+                            <li class="active"><a href="./">Home</a></li>
+                            <li><a href="/about">About</a></li>
                             <li><a href="/shop">Shop</a></li>
-                            <li><a href="#">Pages</a>
-                                <ul class="dropdown">
-                                    <li><a href="/shoping-cart">Shoping Cart</a></li>
-                                    <li><a href="./checkout.html">Check Out</a></li>
-                                    <li><a href="./wisslist.html">Wisslist</a></li>
-                                    <li><a href="./Class.html">Class</a></li>
-                                    <li><a href="./blog-details.html">Blog Details</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="./blog.html">Blog</a></li>
-                            <li><a href="./contact.html">Contact</a></li>
+                            <li><a href="/shoping-cart">Cart</a></li>
+                            <li><a href="/contact">Contact</a></li>
+                            <li th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}"><a href="/admin-panel">Admin Panel</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -406,38 +400,6 @@
         </div>
     </section>
     <!-- Product Section End -->
-
-    <!-- Class Section Begin -->
-    <section class="class spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="class__form">
-                        <div class="section-title">
-                            <span>Class cakes</span>
-                            <h2>Made from your <br />own hands</h2>
-                        </div>
-                        <form action="#">
-                            <input type="text" placeholder="Name">
-                            <input type="text" placeholder="Phone">
-                            <select>
-                                <option value="">Studying Class</option>
-                                <option value="">Writting Class</option>
-                                <option value="">Reading Class</option>
-                            </select>
-                            <input type="text" placeholder="Type your requirements">
-                            <button type="submit" class="site-btn">registration</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="class__video set-bg" data-setbg="../../img/class-video.jpg">
-                <a href="https://www.youtube.com/watch?v=8PJ3_p7VqHw&list=RD8PJ3_p7VqHw&start_radio=1"
-                class="play-btn video-popup"><i class="fa fa-play"></i></a>
-            </div>
-        </div>
-    </section>
-    <!-- Class Section End -->
 
     <!-- Team Section Begin -->
     <section class="team spad">
