Update project files

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -131,7 +131,7 @@
                             <li><a href="./">Home</a></li>
                             <li class="active"><a href="/about">About</a></li>
                             <li><a href="/shop">Shop</a></li>
-                            <li><a href="/shoping-cart">Cart</a></li>
+                            <li><a href="/shopping-cart">Cart</a></li>
                             <li><a href="/contact">Contact</a></li>
                             <li th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}"><a href="/admin-panel">Admin Panel</a></li>
                         </ul>
