--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -133,7 +133,7 @@
                         <li><a href="./">Home</a></li>
                         <li><a href="/about">About</a></li>
                         <li><a href="/shop">Shop</a></li>
-                        <li><a href="/shoping-cart">Cart</a></li>
+                        <li><a href="/shopping-cart">Cart</a></li>
                         <li><a href="/contact">Contact</a></li>
                         <li class="active"><a href="/admin-panel">Admin Panel</a></li>
                     </ul>
