--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -62,3 +62,31 @@
 .admin-btn a{
     color: #fff;
 }
+.checkout__input input[type=radio] {
+    margin-right: 0px;
+    border: 0px;
+    max-width: 10%;
+    height: 2em;
+    display: inline-block;
+}
+.stock-column {
+    margin-left: 0px;
+    padding-left: 0px;
+    margin-right: 30px;
+    padding-right: 30px;
+}
+.item-name-text-column {
+    padding-right: 10px;
+    margin-right: 0px;
+}
+.available-button, .unavailable-button {
+    font-size: 0.6em;
+    padding: 5px;
+    margin-right: 60px;
+}
+.available-button {
+    background-color: #1e7e34;
+}
+.unavailable-button {
+    background-color: #a20e0e;
+}
