--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -130,7 +130,7 @@
                             <li><a href="./">Home</a></li>
                             <li><a href="/about">About</a></li>
                             <li><a href="/shop">Shop</a></li>
-                            <li class="active"><a href="/shoping-cart">Cart</a></li>
+                            <li class="active"><a href="/shopping-cart">Cart</a></li>
                             <li><a href="/contact">Contact</a></li>
                             <li th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}"><a href="/admin-panel">Admin Panel</a></li>
                         </ul>
@@ -165,7 +165,7 @@
     <section class="checkout spad">
         <div class="container">
             <div class="checkout__form" id="checkout-form-div">
-                <form th:action="@{/checkout/add}" method="post">
+                <form th:action="@{/checkout/add}" method="post" id="checkout-form">
                     <div class="row">
                         <div class="col-lg-8 col-md-6">
                             <h6 class="coupon__code"><span class="icon_tag_alt"></span> Have a coupon? <a href="#">Click
