--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -15,23 +15,23 @@
                                 <h2 class="form-signin-heading">Please register</h2>
 
                                 <div class="form-group">
-                                        <input class="form-control" type="text" th:field="${account.firstName}" id="firstName" placeholder="First Name">
+                                        <input class="form-control" type="text" th:field="*{firstName}" id="firstName" placeholder="First Name" required>
                                 </div>
 <!--                                <br/><br/>-->
                                 <div class="form-group">
-                                        <input class="form-control" type="text" th:field="${account.lastName}" id="lastName" placeholder="Last Name">
+                                        <input class="form-control" type="text" th:field="*{lastName}" id="lastName" placeholder="Last Name" required>
                                 </div>
                                 <div class="form-group">
-                                        <input class="form-control" type="text" th:field="${account.accAddress}" id="accAddress" placeholder="Address">
+                                        <input class="form-control" type="text" th:field="*{accAddress}" id="accAddress" placeholder="Address" required>
                                 </div>
                                 <div class="form-group">
-                                        <input class="form-control" type="text" th:field="${account.phone}" id="phone" placeholder="Phone Number">
+                                        <input class="form-control" type="text" th:field="*{phone}" id="phone" placeholder="Phone Number" required>
                                 </div>
                                 <div class="form-group">
-                                        <input class="form-control" type="text" th:field="*{email}" id="email" placeholder="Email">
+                                        <input class="form-control" type="text" th:field="*{email}" id="email" placeholder="Email" required>
                                 </div>
                                 <div class="form-group">
-                                        <input class="form-control" type="text" th:field="*{password}" id="password" placeholder="Password">
+                                        <input class="form-control" type="text" th:field="*{password}" id="password" placeholder="Password" required>
                                 </div>
                                 <button type="submit" class="btn btn-lg btn-primary btn-block">Sign Up</button>
                         </form>
