--- a/src/main/resources/templates/update_account.html
+++ b/src/main/resources/templates/update_account.html
@@ -15,22 +15,27 @@
                         <form method="POST" th:object="${account}" th:action="@{/user/update}">
                                 <h2 class="form-signin-heading">Please update your account</h2>
                                 <span>NOTE: You will need to log in again after updating.</span>
-                                <br>
+                                <br><br>
 
                                 <div class="form-group">
-                                        <input class="form-control" type="text" th:field="*{firstName}" id="firstName">
+                                    <label for="firstName">First Name:</label>
+                                    <input class="form-control" type="text" th:field="*{firstName}" id="firstName" required>
                                 </div>
                                 <div class="form-group">
-                                        <input class="form-control" type="text" th:field="${account.lastName}" id="lastName">
+                                    <label for="lastName">Last Name:</label>
+                                    <input class="form-control" type="text" th:field="${account.lastName}" id="lastName" required>
                                 </div>
                                 <div class="form-group">
-                                        <input class="form-control" type="text" th:field="${account.accAddress}" id="accAddress">
+                                    <label for="accAddress">Address:</label>
+                                    <input class="form-control" type="text" th:field="${account.accAddress}" id="accAddress" required>
                                 </div>
                                 <div class="form-group">
-                                        <input class="form-control" type="text" th:field="${account.phone}" id="phone">
+                                    <label for="phone">Phone Number:</label>
+                                    <input class="form-control" type="text" th:field="${account.phone}" id="phone" required>
                                 </div>
                                 <div class="form-group">
-                                        <input class="form-control" type="text" th:field="*{email}" id="email">
+                                    <label for="email">Email:</label>
+                                    <input class="form-control" type="text" th:field="*{email}" id="email" required>
                                 </div>
                             <button type="submit" class="btn btn-lg btn-primary btn-block">Update Info</button><br/><br/><br/>
 
